--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -22,7 +22,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "nan": "^2.15.0",
     "react-scripts": "^5.0.0",
-    "typescript": "^3.9.10"
+    "typescript": "^3.9.10",
+    "babel-eslint": "^10.1.0"  // <-- Add this line
   },
   "eslintConfig": {
     "extends": "react-app"
