--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -18,12 +18,14 @@
   "devDependencies": {
     "ajv": "^6.12.6",
     "cross-env": "^5.2.0",
+    "eslint": "^7.32.0",  // <-- Add this line
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-import": "^2.22.1",  
     "nan": "^2.15.0",
     "react-scripts": "^5.0.0",
     "typescript": "^3.9.10",
-    "babel-eslint": "^10.1.0" 
+    "babel-eslint": "^10.1.0"
   },
   "eslintConfig": {
     "extends": "react-app"
