--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "ajv": "^6.12.6",
     "cross-env": "^5.2.0",
-    "eslint": "^7.32.0",  // <-- Add this line
+    "eslint": "^7.32.0",  
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-import": "^2.22.1",  
