--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -22,11 +22,16 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-flowtype": "^5.2.0", 
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-security": "^1.4.0",
+    "babel-eslint": "^10.1.0",
     "nan": "^2.15.0",
     "react-scripts": "^5.0.0",
-    "typescript": "^3.9.10",
-    "babel-eslint": "^10.1.0"
+    "typescript": "^3.9.10"
   },
   "eslintConfig": {
     "extends": "react-app"
